--- a/app/src/main/res/layout/fragment_people_header_name.xml
+++ b/app/src/main/res/layout/fragment_people_header_name.xml
@@ -3,6 +3,7 @@
               android:layout_width="match_parent"
               android:layout_height="60dp"
               android:background="#c75526"
+              android:id="@+id/people_name"
               android:gravity="center_vertical"
               android:orientation="horizontal">
 
