--- a/app/src/main/res/layout/fragment_people_header_text.xml
+++ b/app/src/main/res/layout/fragment_people_header_text.xml
@@ -2,19 +2,26 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
+              android:id="@+id/people_top_campus"
               android:orientation="vertical">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_margin="10dp"
-        android:text="TOP CAMPUS USERS"/>
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:textColor="#a8a5a5"
+        android:text="TOP CAMPUS USERS"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
 
     <View
         android:layout_width="wrap_content"
         android:layout_height="1dp"
         android:layout_margin="4dp"
-        android:background="@color/grey_color"/>
+        android:background="#aeabab"/>
 
 </LinearLayout>
