--- a/app/src/main/res/layout/fragment_people_list_item.xml
+++ b/app/src/main/res/layout/fragment_people_list_item.xml
@@ -3,10 +3,11 @@
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_margin="10dp"
                 android:orientation="horizontal">
 
     <com.mikhaellopez.circularimageview.CircularImageView
-        android:id="@+id/peopleUserImage"
+        android:id="@+id/people_user_image"
         android:layout_width="45dp"
         android:layout_height="45dp"
         android:layout_gravity="center"
@@ -22,17 +23,19 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toEndOf="@+id/peopleUserImage"
-        android:layout_toRightOf="@+id/peopleUserImage"
         android:layout_centerInParent="true"
+        android:layout_toEndOf="@+id/people_user_image"
+        android:layout_toRightOf="@+id/people_user_image"
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/list_people_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="NAME"/>
 
         <TextView
+            android:id="@+id/list_people_state"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Last online"/>
@@ -40,11 +43,12 @@
     </LinearLayout>
 
     <ImageView
+        android:id="@+id/list_people_image_state"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/add_friend"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_centerInParent="true"/>
+        android:layout_centerInParent="true"
+        android:src="@drawable/add_friend"/>
 
 </RelativeLayout>
