--- a/app/src/main/res/menu/profile_fragment_menu.xml
+++ b/app/src/main/res/menu/profile_fragment_menu.xml
@@ -2,9 +2,10 @@
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
       tools:context=".MainActivity">
-    <item android:id="@+id/profile_fragment_menu_settings"
-          android:icon="@drawable/mr_ic_settings_dark"
-          android:orderInCategory="100"
-          android:title="@string/action_settings"
-          app:showAsAction="always"/>
+    <item
+        android:id="@+id/profile_fragment_menu_settings"
+        android:icon="@drawable/mr_ic_settings_dark"
+        android:orderInCategory="100"
+        android:title="@string/action_settings"
+        app:showAsAction="always"/>
 </menu>
