--- a/app/src/main/res/layout/fragment_updates_item_cells.xml
+++ b/app/src/main/res/layout/fragment_updates_item_cells.xml
@@ -31,8 +31,10 @@
         android:layout_width="@dimen/updatefragment_picture_size"
         android:layout_height="@dimen/updatefragment_picture_size"
         android:layout_alignParentRight="true"
-        android:background="@android:color/darker_gray"
-        android:layout_margin="@dimen/updatefragment_margins"/>
+        tools:background="@android:color/darker_gray"
+        android:src="@drawable/no_image_placeholder"
+        android:layout_margin="@dimen/updatefragment_margins"
+        android:scaleType="centerCrop"/>
 
     <LinearLayout android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
