--- a/app/src/main/res/layout/activity_linute_sign_up.xml
+++ b/app/src/main/res/layout/activity_linute_sign_up.xml
@@ -3,135 +3,237 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin"
                 tools:context="com.linute.linute.LoginAndSignup.LinuteSignUpActivity">
 
-    <LinearLayout
-        android:id="@+id/signup_email_form"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:paddingBottom="20dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="85dp">
-
-        <com.mikhaellopez.circularimageview.CircularImageView
-            android:id="@+id/signup_profile_pic_view"
-            android:layout_height="100dp"
-            android:layout_width="100dp"
-            android:src="@drawable/no_image_placeholder"
-            android:scaleType="fitCenter"
-            android:layout_marginBottom="15dp"/>
+    <ViewFlipper android:id="@+id/signUp_view_flipper"
+                 android:layout_width="match_parent"
+                 android:layout_height="match_parent">
 
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:weightSum="2">
+        <LinearLayout android:id="@+id/signUp_email_form"
+                      android:layout_width="match_parent"
+                      android:layout_height="wrap_content"
+                      android:layout_gravity="center"
+                      android:gravity="center"
+                      android:orientation="vertical">
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:paddingRight="10dp">
+                android:layout_margin="32dp">
 
                 <EditText
-                    android:id="@+id/signup_fname_text"
+                    android:id="@+id/signup_email_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:maxLength="16"
-                    android:hint="@string/first_name_hint"
+                    android:gravity="center"
+                    android:hint="@string/prompt_email"
+                    android:inputType="textEmailAddress"
                     android:maxLines="1"
                     android:singleLine="true"
                     android:textSize="14sp"/>
             </android.support.design.widget.TextInputLayout>
 
+            <Button android:id="@+id/signUp_verify_email_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/activity_vertical_margin"
+                    android:text="Next"
+                />
+
+        </LinearLayout>
+
+        <LinearLayout android:id="@+id/signUp_verify_form"
+                      android:layout_width="match_parent"
+                      android:layout_height="wrap_content"
+                      android:layout_gravity="center"
+                      android:orientation="vertical">
+
+            <TextView android:layout_width="match_parent"
+                      android:layout_height="wrap_content"
+                      android:layout_marginLeft="32dp"
+                      android:layout_marginRight="32dp"
+                      android:gravity="center"
+                      android:text="A verification code was sent to:"/>
+
+            <TextView android:id="@+id/signUp_email_confirm_text_view"
+                      android:layout_width="match_parent"
+                      android:layout_height="wrap_content"
+                      android:layout_marginBottom="5dp"
+                      android:layout_marginLeft="32dp"
+                      android:layout_marginRight="32dp"
+                      android:layout_marginTop="5dp"
+                      android:gravity="center"
+                      android:textColor="@android:color/holo_blue_dark"
+                      android:textStyle="bold"
+                      tools:text="blahblah@cuny.edu"/>
+
+            <TextView android:layout_width="match_parent"
+                      android:layout_height="wrap_content"
+                      android:layout_marginLeft="32dp"
+                      android:layout_marginRight="32dp"
+                      android:gravity="center"
+                      android:text="Please enter the code below. (Note: The email might have been marked as spam)"/>
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:paddingLeft="10dp">
-
+                android:layout_marginLeft="64dp"
+                android:layout_marginRight="64dp"
+                android:layout_marginTop="32dp"
+                >
                 <EditText
-                    android:id="@+id/signup_lname_text"
+                    android:id="@+id/signUp_verify_code"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:hint="Verification Code"
+                    android:inputType="number"
                     android:maxLength="16"
-                    android:hint="@string/last_name_hint"
                     android:maxLines="1"
                     android:singleLine="true"
                     android:textSize="14sp"/>
-
             </android.support.design.widget.TextInputLayout>
+
+            <LinearLayout android:id="@+id/signUp_code_verify_buttons"
+                          android:layout_width="match_parent"
+                          android:layout_height="wrap_content"
+                          android:layout_gravity="center_horizontal"
+                          android:layout_marginLeft="64dp"
+                          android:layout_marginRight="64dp"
+                          android:layout_marginTop="@dimen/activity_vertical_margin"
+                          android:orientation="horizontal"
+                          android:weightSum="2">
+
+                <Button android:layout_width="0px"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:onClick="enterNewEmail"
+                        android:text="new email"
+                    />
+
+                <Button android:layout_width="0px"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:onClick="verifyCode"
+                        android:text="Next"
+                    />
+
+            </LinearLayout>
 
         </LinearLayout>
 
 
-        <android.support.design.widget.TextInputLayout
+        <LinearLayout
+            android:id="@+id/signUp_name_and_password_form"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:layout_marginLeft="32dp"
+            android:layout_marginRight="32dp"
+            android:orientation="vertical"
+            android:paddingBottom="20dp">
 
-            <EditText
-                android:id="@+id/signup_email_text"
+            <com.mikhaellopez.circularimageview.CircularImageView
+                android:id="@+id/signup_profile_pic_view"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_marginBottom="15dp"
+                android:scaleType="fitCenter"
+                android:src="@drawable/no_image_placeholder"/>
+
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/prompt_email"
-                android:inputType="textEmailAddress"
-                android:maxLines="1"
-                android:singleLine="true"
-                android:textSize="14sp"/>
-        </android.support.design.widget.TextInputLayout>
+                android:orientation="horizontal"
+                android:weightSum="2">
 
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:paddingRight="10dp">
 
-            <EditText
-                android:id="@+id/signup_password"
+                    <EditText
+                        android:id="@+id/signup_fname_text"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:hint="@string/first_name_hint"
+                        android:maxLength="16"
+                        android:maxLines="1"
+                        android:singleLine="true"
+                        android:textSize="14sp"/>
+                </android.support.design.widget.TextInputLayout>
+
+
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:paddingLeft="10dp">
+
+                    <EditText
+                        android:id="@+id/signup_lname_text"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:hint="@string/last_name_hint"
+                        android:maxLength="16"
+                        android:maxLines="1"
+                        android:singleLine="true"
+                        android:textSize="14sp"/>
+
+                </android.support.design.widget.TextInputLayout>
+
+            </LinearLayout>
+
+            <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <EditText
+                    android:id="@+id/signup_password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:hint="@string/prompt_password"
+                    android:inputType="textPassword"
+                    android:maxLines="1"
+                    android:singleLine="true"
+                    android:textSize="14sp"/>
+
+
+            </android.support.design.widget.TextInputLayout>
+
+            <Button
+                android:id="@+id/signup_submit_button"
+                style="?android:textAppearanceSmall"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:hint="@string/prompt_password"
-                android:inputType="textPassword"
-                android:maxLines="1"
-                android:singleLine="true"
-                android:textSize="14sp"/>
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="@dimen/activity_vertical_margin"
+                android:paddingLeft="30dp"
+                android:paddingRight="30dp"
+                android:text="@string/action_sign_up_short"
+                android:textStyle="bold"/>
 
+        </LinearLayout>
 
-        </android.support.design.widget.TextInputLayout>
-
-    </LinearLayout>
-
-
-    <Button
-        android:id="@+id/signup_submit_button"
-        style="?android:textAppearanceSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/action_sign_up_short"
-        android:textStyle="bold"
-        android:layout_below="@+id/signup_email_form"
-        android:layout_centerHorizontal="true"
-        android:paddingLeft="30dp"
-        android:paddingRight="30dp"/>
-
+    </ViewFlipper>
 
     <ProgressBar
-        android:id="@+id/signup_progress_bar"
-        style="?android:attr/progressBarStyleSmall"
+        android:id="@+id/signUp_progress_bar"
+        style="?android:attr/progressBarStyleLarge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/signup_email_form"
-        android:layout_centerHorizontal="true"
-        android:visibility="gone"/>
+        android:layout_centerInParent="true"
+        android:padding="@dimen/activity_vertical_margin"
+        android:background="@android:color/darker_gray"
+        android:visibility="gone"
+        android:alpha="0.5"
+        />
 
 </RelativeLayout>
