--- a/app/src/main/res/layout/activity_facebook_signup.xml
+++ b/app/src/main/res/layout/activity_facebook_signup.xml
@@ -65,6 +65,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/activity_vertical_margin"
+                android:layout_marginBottom="@dimen/activity_vertical_margin"
                 android:hint="Edu Email"
                 android:inputType="textEmailAddress"
                 android:maxLines="1"
@@ -77,11 +78,17 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="@dimen/activity_vertical_margin"
                 android:paddingLeft="30dp"
                 android:paddingRight="30dp"
-                android:text="Next"
-                android:textStyle="bold"/>
+                android:text="Next"/>
+
+            <ProgressBar
+                android:id="@+id/fbSignUp_progress_bar1"
+                style="?android:attr/progressBarStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                />
 
         </LinearLayout>
 
@@ -159,20 +166,18 @@
 
             </LinearLayout>
 
+            <ProgressBar
+                android:id="@+id/fbSignUp_progress_bar2"
+                style="?android:attr/progressBarStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                />
+
         </LinearLayout>
 
 
     </ViewSwitcher>
 
-
-    <ProgressBar
-        android:id="@+id/fbSignUp_progress_bar"
-        style="?android:attr/progressBarStyleLarge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:padding="@dimen/activity_vertical_margin"
-        android:visibility="gone"
-        />
 
 </RelativeLayout>
