--- a/app/src/main/res/menu/profile_fragment_menu.xml
+++ b/app/src/main/res/menu/profile_fragment_menu.xml
@@ -4,7 +4,7 @@
       tools:context=".MainActivity">
     <item
         android:id="@+id/profile_fragment_menu_settings"
-        android:icon="@drawable/mr_ic_settings_dark"
+        android:icon="@drawable/settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="always"/>
