--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,68 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    android:id="@+id/postContainer"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
-
-    <android.support.design.widget.CoordinatorLayout
-        android:id="@+id/coordinator"
-        xmlns:tools="http://schemas.android.com/tools"
+<android.support.v4.widget.DrawerLayout android:id="@+id/mainActivity_drawerLayout"
+                                        xmlns:android="http://schemas.android.com/apk/res/android"
+                                        xmlns:app="http://schemas.android.com/apk/res-auto"
+                                        android:layout_width="match_parent"
+                                        android:layout_height="match_parent"
+                                        android:fitsSystemWindows="true">
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fitsSystemWindows="true"
-        tools:context="com.linute.linute.MainContent.SlidingTab.Main2Activity">
+        android:fitsSystemWindows="true">
 
-        <android.support.design.widget.AppBarLayout
-            android:id="@+id/appbar"
+        <android.support.design.widget.CoordinatorLayout
+            android:id="@+id/coordinator"
+            xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:theme="@style/AppTheme.AppBarOverlay">
+            android:layout_height="match_parent"
+            android:fitsSystemWindows="true"
+            tools:context="com.linute.linute.MainContent.SlidingTab.Main2Activity">
 
-            <include
-                android:id="@+id/mainactivity_toolbar"
-                layout="@layout/tool_bar"/>
-
-            <!--add tabs -->
-            <com.linute.linute.MainContent.SlidingTab.SlidingTabLayout
-                android:id="@+id/mainactivity_tabbar"
+            <android.support.design.widget.AppBarLayout
+                android:id="@+id/appbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/colorPrimary"
-                android:elevation="4dp"/>
+                >
 
-        </android.support.design.widget.AppBarLayout>
+                <include
+                    android:id="@+id/mainactivity_toolbar"
+                    layout="@layout/tool_bar"
+                    app:layout_scrollFlags="scroll|enterAlways|snap"/>
 
-        <include layout="@layout/content_main"/>
+            </android.support.design.widget.AppBarLayout>
 
-        <com.getbase.floatingactionbutton.FloatingActionsMenu
-            android:id="@+id/fabmenu"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            app:borderWidth="0dp"
-            app:fab_expandDirection="up"
-            app:layout_behavior="com.linute.linute.UtilsAndHelpers.ScrollingFAMBehavior">
+            <include android:id="@+id/mainActivity_fragment_holder"
+                     layout="@layout/content_main"/>
 
-            <com.getbase.floatingactionbutton.FloatingActionButton
-                android:id="@+id/fabImage"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:fab_colorNormal="@color/white"
-                android:src="@drawable/fab_camera"
-                app:fab_colorPressed="@color/white_pressed"/>
 
-            <com.getbase.floatingactionbutton.FloatingActionButton
-                android:id="@+id/fabText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/fab_quote"
-                app:fab_colorNormal="@color/white"
-                app:fab_colorPressed="@color/white_pressed"/>
+            <com.getbase.floatingactionbutton.FloatingActionsMenu android:id="@+id/fabmenu"
+                                                                  android:layout_width="wrap_content"
+                                                                  android:layout_height="wrap_content"
+                                                                  android:layout_gravity="bottom|end"
+                                                                  android:visibility="gone"
+                                                                  app:borderWidth="0dp"
+                                                                  app:fab_expandDirection="up"
+                                                                  app:layout_behavior="com.linute.linute.UtilsAndHelpers.ScrollingFAMBehavior">
 
-        </com.getbase.floatingactionbutton.FloatingActionsMenu>
+                <com.getbase.floatingactionbutton.FloatingActionButton android:id="@+id/fabImage"
+                                                                       android:layout_width="wrap_content"
+                                                                       android:layout_height="wrap_content"
+                                                                       android:src="@drawable/fab_camera"
+                                                                       app:fab_colorNormal="@color/white"
+                                                                       app:fab_colorPressed="@color/white_pressed"/>
 
-    </android.support.design.widget.CoordinatorLayout>
-</FrameLayout>
+                <com.getbase.floatingactionbutton.FloatingActionButton android:id="@+id/fabText"
+                                                                       android:layout_width="wrap_content"
+                                                                       android:layout_height="wrap_content"
+                                                                       android:src="@drawable/fab_quote"
+                                                                       app:fab_colorNormal="@color/white"
+                                                                       app:fab_colorPressed="@color/white_pressed"/>
+
+
+            </com.getbase.floatingactionbutton.FloatingActionsMenu>
+
+        </android.support.design.widget.CoordinatorLayout>
+
+    </FrameLayout>
+
+    <android.support.design.widget.NavigationView android:id="@+id/mainActivity_navigation_view"
+                                                  android:layout_width="wrap_content"
+                                                  android:layout_height="match_parent"
+                                                  android:layout_gravity = "start"
+                                                  android:background="@color/colorPrimary"
+                                                  app:itemTextColor="@color/white"
+                                                  app:itemIconTint="@color/white"
+                                                  app:headerLayout="@layout/drawer_header"
+                                                  app:menu="@menu/main_activity_drawer">
+
+        <ImageView android:id="@+id/mainActivity_nav_logout_button"
+                   android:layout_gravity="bottom|fill_horizontal"
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:layout_margin="@dimen/activity_vertical_margin"
+                   android:src="@drawable/unfollowing"
+
+
+            />
+
+    </android.support.design.widget.NavigationView>
+
+
+</android.support.v4.widget.DrawerLayout>
