--- a/app/src/main/res/layout/fragment_discover.xml
+++ b/app/src/main/res/layout/fragment_discover.xml
@@ -13,21 +13,11 @@
         android:focusable="true"
         android:focusableInTouchMode="true">
 
-        <EditText
-            android:id="@+id/postBox"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_margin="5dp"
-            android:background="#FFFFFF"
-            android:ems="10"
-            android:hint="Write something about your college..."
-            android:inputType="textMultiLine"/>
-
         <android.support.v7.widget.RecyclerView
             android:id="@+id/eventList"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/postBox"/>
+            android:layout_height="match_parent"
+            />
 
     </RelativeLayout>
 </android.support.v4.widget.SwipeRefreshLayout>
