--- a/app/src/main/res/layout/activity_linute_sign_up.xml
+++ b/app/src/main/res/layout/activity_linute_sign_up.xml
@@ -193,6 +193,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/activity_vertical_margin"
+                android:layout_marginBottom="@dimen/activity_vertical_margin"
                 android:hint="@string/prompt_password"
                 android:inputType="textPassword"
                 android:maxLines="1"
@@ -206,7 +207,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="@dimen/activity_vertical_margin"
                 android:paddingLeft="30dp"
                 android:paddingRight="30dp"
                 android:text="@string/action_sign_up_short"
