--- a/app/src/main/res/layout/squarecamera__fragment_edit_save_photo.xml
+++ b/app/src/main/res/layout/squarecamera__fragment_edit_save_photo.xml
@@ -2,12 +2,13 @@
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@android:color/black"
+                android:background="@color/colorPrimary"
                 android:focusableInTouchMode="true"
                 tools:context="com.desmond.squarecamera.EditSavePhotoFragment">
 
     <View
         android:id="@+id/topView"
+        android:background="@color/colorPrimary"
         android:layout_width="match_parent"
         android:layout_height="0dp"/>
 
