--- a/app/src/main/res/menu/main_activity_drawer.xml
+++ b/app/src/main/res/menu/main_activity_drawer.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+      xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
     <group android:checkableBehavior="single">
@@ -8,18 +9,18 @@
             android:checked="true"
             android:icon="@drawable/ic_action_social_people"
             android:title="Feed"
-            android:actionLayout="@layout/main_activity_nav_action_counter"
+            app:actionLayout="@layout/main_activity_nav_action_counter"
             />
         <item
             android:id="@+id/navigation_item_people"
             android:icon="@drawable/ic_action_content_add"
             android:title="People"
-            android:actionLayout="@layout/main_activity_nav_action_counter"/>
+            app:actionLayout="@layout/main_activity_nav_action_counter"/>
         <item
             android:id="@+id/navigation_item_activity"
             android:icon="@drawable/ic_action_navigation_close"
             android:title="Activity"
-            android:actionLayout="@layout/main_activity_nav_action_counter"/>
+            app:actionLayout="@layout/main_activity_nav_action_counter"/>
 
     </group>
 
